# FutureProject

./: .gitignore  AGENTS.md  README.md  pyproject.toml
config/: commodities.yaml  default.yaml  expiry_rules.yaml  repro_20260119.yaml
reports/: hg_pre_expiry_dte_analysis.tex  hg_spread_strategy_search.tex  pre_expiry_dte_report.tex  pre_expiry_dte_report_tables.tex
scripts/: build_hg_spread_strategy_search_report.py  build_pre_expiry_report_tables.py  dte_event_study.py  dte_robustness.py  dte_strategy_scan.py  dte_walkforward.py  expiry_seasonality.py  generate_figures.py  run_spread_carry.py  run_spread_mean_reversion.py  run_walk_forward_ab.py
src/futures_curve/: __init__.py  cli.py  reporting.py
src/futures_curve/analysis/: __init__.py  backtest.py  config.py  costs.py  data.py  event_study.py  expiry_seasonality.py  metrics.py  params.py  risk.py  robustness.py  roll.py  scan.py  strategy_scan.py  types.py  walk_forward.py  walkforward.py
src/futures_curve/stage0/: __init__.py  contract_specs.py  expiry_schedule.py  trading_calendar.py
src/futures_curve/stage1/: __init__.py  bucket_aggregator.py  file_scanner.py  parquet_writer.py  pipeline.py  streaming_reader.py  timezone_inference.py
src/futures_curve/stage2/: __init__.py  contract_ranker.py  pipeline.py  roll_detector.py  (+1 more)
tests/: __init__.py  test_analysis.py  test_backtest.py  test_eom_regression.py  test_metrics.py  test_pre_expiry_regression.py  test_reporting.py  test_scan.py  test_stage0.py  test_stage1_ingestion.py  test_stage2.py  test_stage4.py  test_strategies.py  test_utils.py
(+27 files in other folders)
